docs/tests/parser/structs/valid/RegularStructWithMultipleImplements.src
struct Robot : IMovable, IChargeable, ISpeakable {
    let int battery;
}
