docs/tests/parser/structs/invalid/StructTrailingCommaImplements.src
struct Foo : IBar, IBaz, {
    let int x;
}
